add postinstall script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "api-server.js",
   "scripts": {
-    "start": "node api-server.js"
+    "start": "node api-server.js",
+    "postinstall": "puppeteer install"
   },
   "dependencies": {
     "express": "^4.18.2",
