--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "api-server.js",
   "scripts": {
     "start": "node api-server.js",
-    "postinstall": "puppeteer install"
+    "postinstall": "node install-chrome.js"
   },
   "dependencies": {
+    "@puppeteer/browsers": "^2.10.4",
     "express": "^4.18.2",
     "puppeteer": "^22.8.2"
   }
