--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "dependencies": {
     "@puppeteer/browsers": "^2.10.4",
     "express": "^4.18.2",
-    "puppeteer": "^22.8.2"
+    "puppeteer-core": "^24.8.2"
   }
 }
