--- a/render.yaml
+++ b/render.yaml
@@ -3,22 +3,25 @@ services:
     name: tradingview-api
     env: node
     plan: free
-    buildCommand: npm install
+    buildCommand: |
+      # Installer Chromium directement (beaucoup plus léger que Chrome)
+      apt-get update
+      apt-get install -y chromium-browser
+      
+      # Installer les dépendances Node.js
+      npm install
     startCommand: npm start
     autoDeploy: true
     envVars:
       - key: NODE_VERSION
         value: "20.x"
-    buildFilter:
-      paths:
-        - package.json
-        - package-lock.json
-    # Installation des dépendances système nécessaires pour Chrome
+    # Installation des dépendances minimales pour Chromium
     preDeployCommand: |
       apt-get update && apt-get install -y \
-      gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
-      libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 \
-      libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 \
-      libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 \
-      libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation \
-      libappindicator1 libnss3 lsb-release xdg-utils wget
+      libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
+      libexpat1 libfontconfig1 libgcc1 libglib2.0-0 libnspr4 \
+      libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 \
+      libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 \
+      libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 \
+      libxss1 libxtst6 ca-certificates fonts-liberation \
+      libnss3 xdg-utils
