--- a/render.yaml
+++ b/render.yaml
@@ -3,25 +3,14 @@ services:
     name: tradingview-api
     env: node
     plan: free
-    buildCommand: |
-      # Installer Chromium directement (beaucoup plus léger que Chrome)
-      apt-get update
-      apt-get install -y chromium-browser
-      
-      # Installer les dépendances Node.js
-      npm install
+    buildCommand: npm install
     startCommand: npm start
     autoDeploy: true
     envVars:
       - key: NODE_VERSION
         value: "20.x"
-    # Installation des dépendances minimales pour Chromium
-    preDeployCommand: |
-      apt-get update && apt-get install -y \
-      libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
-      libexpat1 libfontconfig1 libgcc1 libglib2.0-0 libnspr4 \
-      libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 \
-      libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 \
-      libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 \
-      libxss1 libxtst6 ca-certificates fonts-liberation \
-      libnss3 xdg-utils
+      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
+        value: "true"
+      # Ajoutez cette variable pour indiquer à votre application où trouver le navigateur
+      - key: PUPPETEER_EXECUTABLE_PATH
+        value: "/usr/bin/chromium-browser"
