--- a/render.yaml
+++ b/render.yaml
@@ -14,3 +14,5 @@ services:
       # Ajoutez cette variable pour indiquer à votre application où trouver le navigateur
       - key: PUPPETEER_EXECUTABLE_PATH
         value: "/usr/bin/chromium-browser"
+      - key: API_KEY
+        sync: false         
