--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "api-server.js",
   "scripts": {
-    "start": "node api-server.js"
+    "start": "node api-server.js",
+    "postinstall": "node install-chrome.js"
   },
   "dependencies": {
     "@puppeteer/browsers": "^2.10.4",
